# puree

./: .gitignore  CHIRPY_SETUP.md  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SUPPORT.md  THEME_SETUP.md  __init__.example.py  __init__.py  blender_manifest.example.toml  blender_manifest.toml  generate_lock.py  justfile  pyproject.toml  requirements.txt  setup.py  test_property_access.py  test_reload.py  update_wheels.py
.github/: RELEASE.md
docs/: .release_note.md  .resources.md  API.md  BA_POST.md  BUGFIX_FONT_RELOAD.md  COMPONENTS.md  CONTRIBUTING.md  DOCS.md  FUNDING.yml  Gemfile  LINUX_FIX.md  RELEASE.md  SUPPORT.md  TROUBLESHOOTING.md  _config.yml  build.md  index.md
puree/: __init__.py  compiler.py  extract_images.py  extract_text.py  extract_text_input.py  hit_op.py  hot_reload.py  hot_reload_ops.py  img_op.py  mouse_op.py  native_bindings.py  panel.py  parser.py  parser_op.py  render.py  scroll_op.py  scss_compiler.py  space_config.py  text_input_op.py  text_op.py  utils.py
puree/hit_core/: .gitignore  Cargo.toml  README.md  build.bat  build.sh
puree/hit_core/src/: container_data.rs  hit_detection.rs  lib.rs  types.rs
puree/puree_core/: Cargo.toml  build.bat  build.sh
puree/puree_core/src/: config_parser.rs  lib.rs  space_mapper.rs  types.rs
puree/puree_core/src/color/: mod.rs
puree/puree_core/src/css/: mod.rs  parser.rs  scss_compiler.rs
puree/puree_core/src/file_watcher/: mod.rs
puree/puree_core/src/hit_detection/: container_data.rs  detector.rs  mod.rs
puree/puree_core/src/layout/: mod.rs
src/: __init__.py  panel.py  (+8 more)
(+70 files in other folders)
