[package]
name = "puree_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "puree_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
lightningcss = "1.0.0-alpha.57"
grass = "0.13"
cssparser = "0.31"
once_cell = "1.19"
regex = "1.10"
csscolorparser = "0.7"
palette = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true
